# TeamOlimpo

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  opencode.json  pyproject.toml
.claude/: settings.json
.claude/agents/: atena.md  clio.md  dike.md  efesto-original.md  efesto.md  eunomia.md  euterpe.md  hermione.md  metis.md  poros.md  proteo.md  pythagoras.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.hermes-rename-backup/: .mcp.json  CLAUDE.md  opencode.json
.hermes-rename-backup/paper/: whitepaper.md
.hermes-rename-backup/tests/: test_log_compression.py  test_session_memory.py
.opencode/agents/: atena.md  clio.md  dike.md  efesto.md  eunomia.md  euterpe.md  fidia.md  hermione.md  metis.md  poros.md  proteo.md  pythagoras.md
Team/Members/: Registro.md  atena.md  clio.md  dike.md  efesto.md  eunomia.md  euterpe.md  fidia.md  hermione.md  metis.md  poros.md  proteo.md  pythagoras.md
Team/Meta/: acm-report-template.md  adq-checklist.md  agent-template-base.md  agent-template-bozza.md  automation_video_ia-guida.md  deviation-log-guida.md  email-filter-design.md  email-processor-design.md  email-vault-mapping.md  email-vault-struttura.md  folder-migration-plan.md  folder-structure.md  git-quick-reference.md  handoff-register-guida.md  mcp-tool-catalog.md  opencode-agents-guida.md  opencode-permissions-spec.md  oq-recovery-template.md  pdf-converter-guida.md  quality-gate-output.md  strumenti-indice.md
Team/Prompts/: CONVENTIONS.md  _indice.md
Team/SOPs/: OLM-SOP-001-sop-format.md  OLM-SOP-002-handoff-guide.md  OLM-SOP-003-agent-design-methodology.md  OLM-SOP-004-agent-review-flow.md  OLM-SOP-005-design-first-workflow.md  OLM-SOP-006-log-compression.md  OLM-SOP-007-model-sync-procedure.md  OLM-SOP-008-obsidian-vault-conventions.md  OLM-SOP-009-poros-orchestration-methodology.md  OLM-SOP-010-project-convention.md  agent-design-methodology.md  agent-review-flow.md  design-first-workflow.md  handoff-guide.md  kba-analysis-flow.md  log-compression.md  model-sync-procedure.md  obsidian-vault-conventions.md  poros-orchestration-methodology.md
Team/efesto/: hf-T-HF-001.md
paper/: README.md  whitepaper-it.md  whitepaper.md
scripts/: test-template.sh
tests/: test_executor_server.py  test_llm_image.py  test_log_compression.py  test_paths.py  test_session_memory.py  test_synapsis_run1_lazy_session.py  test_token_juice.py
tools/: __init__.py  config.yaml  extract_kba_excel.py  gen_fermata.py  migrate-email-vault.py  sync_agents.py
tools/_template/: __init__.py  __main__.py
tools/automation_video_ia/: __init__.py  __main__.py  cli.py
tools/common/: paths.py
tools/email_processor/: __init__.py  __main__.py  aggregator.py  attachment_cache.json  attachment_cache.py  cli.py  contacts.py  discovery.py  filter.py  filter_rules.yaml  server.py
tools/executor/: __init__.py  server.py
tools/file_stats/: __init__.py  __main__.py  cli.py
tools/file_type_counter/: __init__.py  __main__.py
tools/fix_attachment_links/: __main__.py  cli.py
tools/frontmatter_counter/: __init__.py  __main__.py  cli.py
tools/handoff_register/: __init__.py  __main__.py  cli.py  config.py  scanner.py  writer.py
tools/image_gen/: __init__.py  __main__.py  cli.py  client.py  config.py  image_processor.py
tools/kba/: __init__.py  inventory_builder.py
tools/kba_fermata/: __init__.py  __main__.py  cli.py  writer.py
tools/kba_indexer/: __init__.py  __main__.py  cli.py  config.py  parser.py  writer.py
tools/kba_meeting/: __init__.py  __main__.py  cli.py
tools/kba_merger/: __init__.py  __main__.py  cli.py  config.py  enricher.py  gap.py  learner.py  merger.py  writer.py
tools/kba_pipeline/: __init__.py  __main__.py  cli.py  config.py  steps.py
tools/kba_reporter/: brief_builder.py  classifier.py  cli.py  config.py
tools/kba_resolver/: __init__.py  __main__.py  cli.py  config.py  resolver.py
tools/knowledge_base/: __init__.py  chunk_indexer.py  grep_engine.py  vector_indexer.py
tools/llm/: __init__.py  batch.py  cli.py  config.py  interactive.py
tools/loc_counter/: __init__.py  __main__.py  cli.py
(+277 files in other folders)
